app/temp_cache/Кирилл_Сухоруких_Всеволодович_1479831623/errors.txt
code.c: In function ‘main’:
code.c:9:1: error: expected ‘;’ before ‘}’ token
 }
 ^
